@@ -7,6 +7,10 @@ or info related to the entry. <http://sourceforge.net/projects/vpopmail/>
 	- Patch for vpgsql.c fixes bug with Postgres and roaming users
 	  (POP before SMTP). [895501]
 
+	Françoi Wautier
+	- Fix method used to open database in vauth_open_update of
+	  vmysql.c. [967994, 946983]
+
 	Tom Collins
 	- Fix `vuserinfo -l` output, based on Bill Shupp's patch
 	  (moved code to a single function call). [961742]
